# mac-init

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  V2.md  env.template  example.env  install.sh  setup.sh
.claude/: settings.json
.dal/mac-host/: dal.cue
.github/workflows/: ci.yml  release-domains.yml
.obsidian-local/: vault.cue
cli/src/: constants.rs  main.rs
cli/src/dal/: mod.rs
cli/src/files/: lint.rs  mod.rs
cli/src/keyboard/: mod.rs
cli/src/workspace/: mod.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/common/src/: paths.rs  tui_spec.rs
crates/core/: build.rs  env.template
crates/core/src/: common.rs  config.rs  constants.rs  lib.rs  profile.rs
crates/domains/manager/: Cargo.toml
crates/domains/manager/src/: main.rs
crates/domains/mount/: Cargo.toml
crates/domains/mount/src/: backend.rs  main.rs  netfs.rs  tests.rs
crates/tui/: Cargo.toml
crates/tui-v2/: Cargo.toml
crates/tui-v2/src/: app.rs  main.rs  registry.rs  spec.rs
crates/tui-v2/src/widgets/: mod.rs
crates/tui/src/: app.rs  main.rs  registry.rs  spec.rs
crates/tui/src/app/: async_ops.rs  domain_data.rs  input_modal.rs  mod.rs  render.rs  sidebar.rs  template.rs  types.rs
crates/tui/src/models/: mod.rs
crates/tui/src/services/: mod.rs
crates/tui/src/tabs/: brew.rs  card.rs  configs.rs  connect.rs  container.rs  containers.rs  cron.rs  defaults.rs  env.rs  git.rs  host.rs  infra.rs  install.rs  mod.rs  services.rs  status.rs  store.rs
crates/tui/src/ui/: tabbar.rs
crates/tui/src/widgets/: mod.rs
crates/tui/tests/: tui_e2e.rs
crates/tui/tests/snapshots/: tui_e2e__compact_layout.snap  tui_e2e__confirm_quit.snap  tui_e2e__domain_selected.snap  tui_e2e__empty_app.snap  tui_e2e__env_cards.snap  tui_e2e__env_cards_second.snap  tui_e2e__initial_sidebar.snap  tui_e2e__install_tab.snap  tui_e2e__partial_install.snap  tui_e2e__section_menu_actions_focused.snap  tui_e2e__section_menu_cards_focused.snap  tui_e2e__section_menu_third.snap  tui_e2e__section_tab_switch.snap  tui_e2e__spinner_loading.snap
cue/: lint.cue  projects.cue
dashboard/: server.sh
docs/: ADDING_DOMAIN.md
mac-app-init/: .gitmodules  CLAUDE.md  README.md  V2.md  install.sh
mac-app-init/.claude/: compaction-snapshot.json
mac-app-init/.githooks/: pre-push
mac-app-init/crates/tui/: Cargo.toml
mac-app-init/crates/tui/src/: lib.rs  main.rs  registry.rs
mac-app-init/crates/tui/src/app/: async_ops.rs  domain_data.rs  sidebar.rs  types.rs
mac-app-init/crates/tui/src/widgets/: mod.rs
mac-app-init/crates/tui/tests/snapshots/: tui_e2e__confirm_quit.snap  tui_e2e__domain_selected.snap  tui_e2e__env_cards.snap  tui_e2e__env_cards_second.snap  tui_e2e__spinner_loading.snap
mac-app-init/docs/: ADDING_DOMAIN.md  domain-integration-checklist.md
mac-app-init/ncl/: lint.ncl  lint.sh  projects.ncl  schedule.ncl  worktree.ncl
mac-app-init/scripts/: new-domain.sh  release-local.sh
mac-dev-ssl/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
mac-dev-ssl/crates/domains/apps/: Cargo.toml  domain.ncl
mac-dev-ssl/crates/domains/apps/src/: main.rs
mac-dev-ssl/crates/domains/cert/: Cargo.toml  domain.ncl
mac-dev-ssl/crates/domains/cert/src/: main.rs
mac-dev-ssl/crates/domains/proxy/: Cargo.toml  domain.ncl
mac-dev-ssl/crates/domains/proxy/src/: main.rs
mac-dev-ssl/crates/domains/up/: Cargo.toml  domain.ncl
mac-dev-ssl/crates/domains/up/src/: main.rs
mac-dev-ssl/ncl/: domains.ncl
mac-host-commands/: .gitignore  README.md
mac-host-commands/.claude/: settings.json
mac-host-commands/homebrew/: mac-host-commands.rb
mac-host-commands/ncl/: dal.ncl  domains.ncl  projects.ncl  vault.ncl
mac-host-commands/scripts/: file-organizer.sh  projects-sync.sh  sd-backup.sh
ncl/: cards.ncl  domains.ncl  lint.sh  projects.ncl  schedule.ncl
profiles/: example.ncl
scripts/: install-local.sh  new-domain.sh  release-local.sh
src/: config.rs  main.rs
src/dal/: mod.rs
src/files/: mod.rs  sd.rs
src/init/: mod.rs
src/mount/: mod.rs
src/network/: mod.rs
src/obsidian/: mod.rs
src/setup/: mod.rs
src/ssh/: mod.rs
src/synology/: mod.rs
src/workspace/: mod.rs
src/worktree/: mod.rs
vscode-init/: .gitignore  Cargo.toml  README.md
vscode-init/src/: main.rs  preset.rs
(+246 files in other folders)
