[package]
name = "vscode-init"
version = "0.1.0"
edition = "2021"
description = "Anti-gravity for VSCode — one command to set up your dev environment"
license = "MIT"

[[bin]]
name = "vsi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dirs = "5"
