[package]
name = "mac-domain-manager"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[[bin]]
name = "mac"
path = "src/main.rs"

[dependencies]
mac-host-core = { path = "../../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
