[package]
name = "mac-host-tui"
version = "1.1.0"
edition = "2024"
license = "BUSL-1.1"

[lib]
name = "mac_host_tui"
path = "src/lib.rs"

[[bin]]
name = "mai-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-tree-widget = "0.24.0"
tui-input = "0.11"

[dev-dependencies]
insta = "1"
